added a devServer section to webpack configuration file, so I can have live reload server - seems webpack is bundling into the dist folder correctly

--- a/src/index.html
+++ b/src/index.html
@@ -14,20 +14,10 @@
     <nav>
       <button>Home</button>
       <button>Menu</button>
-      <button>About</button>
+      <button>Contact Us</button>
     </nav>
   </header>
   <div id="content">
-    <div id="title">
-      <h1 id="heading">Vito's Pizza</h1>
-    </div>
-    <div id="container">
-      <div id="abouttxt">
-        <p>Italia Restaurante Margerita</p>
-      </div>
-      <img src="images/pizza.jpg" id="pizza">
-    </div>
-    
   </div>
 </body>
 </html>
