--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
 <body>
   <header>
     <nav>
-      <button>Home</button>
-      <button>Menu</button>
-      <button>Contact Us</button>
+      <button id="homebtn">Home</button>
+      <button id="menubtn">Menu</button>
+      <button id="contactbtn">Contact Us</button>
     </nav>
   </header>
   <div id="content">
